// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'Montserrat',helvetica,sans serif;
  font-size: 18px;
  border-width: 0;
  border-style: solid;
  border-radius: 0.5rem;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  cursor: not-allowed;
}

<Input
  backgroundColor="gray-1"
  color="gray-7"
  disabled={false}
  type="text"
  width="100%"
>
  <styled.input
    backgroundColor="gray-1"
    color="gray-7"
    disabled={false}
    type="text"
    width="100%"
  >
    <input
      className="c0"
      color="gray-7"
      disabled={false}
      type="text"
      width="100%"
    />
  </styled.input>
</Input>
`;

exports[`Input should render correctly with borderColor 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'Montserrat',helvetica,sans serif;
  font-size: 18px;
  border-width: 1px;
  border-color: gold;
  border-style: solid;
  border-radius: 0.5rem;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  cursor: not-allowed;
}

<Input
  backgroundColor="gray-1"
  borderColor="gold"
  color="gray-7"
  disabled={false}
  type="text"
  width="100%"
>
  <styled.input
    backgroundColor="gray-1"
    borderColor="gold"
    color="gray-7"
    disabled={false}
    type="text"
    width="100%"
  >
    <input
      className="c0"
      color="gray-7"
      disabled={false}
      type="text"
      width="100%"
    />
  </styled.input>
</Input>
`;

exports[`Input should render correctly with disabled 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'Montserrat',helvetica,sans serif;
  font-size: 18px;
  border-width: 0;
  border-style: solid;
  border-radius: 0.5rem;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  cursor: not-allowed;
}

<Input
  backgroundColor="gray-1"
  color="gray-7"
  disabled={true}
  type="text"
  width="100%"
>
  <styled.input
    backgroundColor="gray-1"
    color="gray-7"
    disabled={true}
    type="text"
    width="100%"
  >
    <input
      className="c0"
      color="gray-7"
      disabled={true}
      type="text"
      width="100%"
    />
  </styled.input>
</Input>
`;

exports[`Input should render correctly with type 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'Montserrat',helvetica,sans serif;
  font-size: 18px;
  border-width: 0;
  border-style: solid;
  border-radius: 0.5rem;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  cursor: not-allowed;
}

<Input
  backgroundColor="gray-1"
  color="gray-7"
  disabled={false}
  type="password"
  width="100%"
>
  <styled.input
    backgroundColor="gray-1"
    color="gray-7"
    disabled={false}
    type="password"
    width="100%"
  >
    <input
      className="c0"
      color="gray-7"
      disabled={false}
      type="password"
      width="100%"
    />
  </styled.input>
</Input>
`;

exports[`Input should render correctly with width 1`] = `
.c0 {
  display: block;
  width: 200px;
  height: 52px;
  padding: 0 20px;
  box-sizing: border-box;
  font-family: 'Montserrat',helvetica,sans serif;
  font-size: 18px;
  border-width: 0;
  border-style: solid;
  border-radius: 0.5rem;
  background-image: none;
  outline-width: 0;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c0:disabled {
  cursor: not-allowed;
}

<Input
  backgroundColor="gray-1"
  color="gray-7"
  disabled={false}
  type="text"
  width="200px"
>
  <styled.input
    backgroundColor="gray-1"
    color="gray-7"
    disabled={false}
    type="text"
    width="200px"
  >
    <input
      className="c0"
      color="gray-7"
      disabled={false}
      type="text"
      width="200px"
    />
  </styled.input>
</Input>
`;
